--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
 <img src="images/cat1.jpg" alt="Cat1">
 <link rel="stylesheet" href="styles/style.css">
 
+<link rel="stylesheet" href="styles2/style2.css">
